name:                h2c
version:             0.1.0.0
synopsis:            HTTP/2 client
description:         Please see README.md
homepage:            http://github.com/jstepien/h2c
license:             MIT
author:              Jan Stępień
maintainer:          jan@stepien.cc
copyright:           2015 (C) Jan Stępień
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , binary
                     , bytestring
                     , data-default-class
                     , network
                     , tls
                     , x509-system
  default-language:    Haskell2010

executable h2c-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , h2c
  default-language:    Haskell2010

test-suite h2c-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , h2c
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jstepien/h2c
